Fixed alignment issues in client

--- a/style.css
+++ b/style.css
@@ -413,9 +413,6 @@ li.link {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 0;
 }
 
-.bottom.b1 {
-  justify-self: flex-end;
-  /* display: none; */
-}
